cluster-setup/k8s-backup/kafka/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"akhq","namespace":"kafka"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"akhq"}},"template":{"metadata":{"labels":{"app":"akhq"}},"spec":{"containers":[{"env":[{"name":"MICRONAUT_CONFIG_FILES","value":"file:/config/application.yml"}],"image":"tchiotludo/akhq:latest","name":"akhq","ports":[{"containerPort":8080}],"volumeMounts":[{"mountPath":"/config","name":"config-volume"}]}],"volumes":[{"configMap [...]
    creationTimestamp: "2024-06-26T19:20:41Z"
    generation: 1
    name: akhq
    namespace: kafka
    resourceVersion: "87965"
    uid: 3879a003-f223-4fb8-bf02-ce37f83240fb
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: akhq
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: akhq
      spec:
        containers:
        - env:
          - name: MICRONAUT_CONFIG_FILES
            value: file:/config/application.yml
          image: tchiotludo/akhq:latest
          imagePullPolicy: Always
          name: akhq
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /config
            name: config-volume
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: akhq-config
          name: config-volume
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-06-26T19:20:41Z"
      lastUpdateTime: "2024-06-26T19:20:43Z"
      message: ReplicaSet "akhq-5887bb7b6b" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-06-30T16:28:59Z"
      lastUpdateTime: "2024-06-30T16:28:59Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
